--- a/website/index.html
+++ b/website/index.html
@@ -4,24 +4,25 @@
 <meta charset="UTF-8">
 <title>Weather Journal</title>
 <link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+<!-- <link rel="stylesheet" href="style.css"> -->
 </head>
  <body>
-<div id = "app">
-  <div class ="holder headline">
+<div id = "app" class="container">
+  <div class ="holder headline h1">
     Weather Journal App
   </div>
-  <div class ="holder zip">
-    <label for="zip">Enter Zipcode here</label>
-    <input type="text" id="zip" placeholder="enter zip code here">
+  <div class ="holder zip mb-3">
+    <label for="zip" class="form-label">Enter Zipcode here</label>
+    <input type="text" id="zip" class="form-control" placeholder="enter zip code here">
   </div>
-  <div class ="holder feel">
+  <div class ="holder feel mb-3">
     <label for="feelings">How are you feeling today?</label>
-    <textarea class= "myInput" id="feelings" placeholder="Enter your feelings here" rows="9" cols="50"></textarea>
-    <button id="generate" type = "submit"> Generate </button>
+    <textarea class= "myInput form-control" id="feelings" placeholder="Enter your feelings here" rows="9" cols="50"></textarea>
+    <button id="generate" type = "submit" class="btn btn-primary mt-3"> Generate </button>
   </div>
-  <div class ="holder entry">
-    <div class = "title">Most Recent Entry</div>
+  <div class ="holder entry mb-3">
+    <div class = "title mb-3">Most Recent Entry...</div>
    <div id = "entryHolder">
     <div id = "date"></div> 
    <div id = "temp"></div>
